--- a/theme/common.css
+++ b/theme/common.css
@@ -175,6 +175,7 @@ a:hover	{ text-decoration: underline; }
 }
 
 .site_logo {
+	background-repeat: no-repeat;
 	display: inline-block;
 	width: 149px;
 	height: 52px;
